// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator shows a validator profile information errors signing info is missing 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status active"
      >
        
        Active
      
      </span>
       
      <!---->
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <img
          alt="validator logo for good_greg"
          class="li-validator-image"
          src="https://s3.amazonaws.com/img/path.jpg"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            good_greg
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Good Guy Greg
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.greg.com"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.greg.com
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          -NaN%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          1.40% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #0
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          0.9962
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          0.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          50.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          1.00%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          in 49 years
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user has signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status active"
      >
        
        Active
      
      </span>
       
      <!---->
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <img
          alt="validator logo for good_greg"
          class="li-validator-image"
          src="https://s3.amazonaws.com/img/path.jpg"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            good_greg
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Good Guy Greg
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.greg.com"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.greg.com
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          -NaN%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          1.40% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #0
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          0.9962
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          0.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          50.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          1.00%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          in 49 years
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user hasn't signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status active"
      >
        
        Active
      
      </span>
       
      <!---->
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <img
          alt="validator logo for good_greg"
          class="li-validator-image"
          src="https://s3.amazonaws.com/img/path.jpg"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            good_greg
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Good Guy Greg
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.greg.com"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.greg.com
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          -NaN%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          1.40% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #0
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          0.9962
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          0.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          50.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          1.00%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          in 49 years
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions=""
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to=""
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows a validator as an inactive candidate if he has no voting_power 1`] = `"Active"`;

exports[`PageValidator shows a validator profile information shows empty website url 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status active"
      >
        
        Active
      
      </span>
       
      <!---->
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <img
          alt="validator logo for good_greg"
          class="li-validator-image"
          src="https://s3.amazonaws.com/img/path.jpg"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            good_greg
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Good Guy Greg
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href=""
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          -NaN%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          1.40% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #0
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          0.9962
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          0.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          50.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          1.00%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          in 49 years
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows http website url 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status active"
      >
        
        Active
      
      </span>
       
      <!---->
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <img
          alt="validator logo for good_greg"
          class="li-validator-image"
          src="https://s3.amazonaws.com/img/path.jpg"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            good_greg
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Good Guy Greg
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="http://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            http://www.monty.ca
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          -NaN%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          1.40% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #0
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          0.9962
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          0.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          50.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          1.00%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          in 49 years
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows that a validator is jailed 1`] = `"Active"`;

exports[`delegationTargetOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "undefined - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;
